--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,13 @@ repositories {
     mavenCentral()
 }
 
+sourceCompatibility = 1.6
+targetCompatibility = 1.6
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4+'
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '1.9'
 }
